[all] Upgrade dependencies' versions.
Signed-off-by: Stéphane Galland <galland@arakhne.org>