@@ -23,8 +23,8 @@
 		<bytecode.optimize>false</bytecode.optimize>
 		<bytecode.debug>true</bytecode.debug>
 		<!-- Version of Mockito library -->
-		<mockito.version>3.2.0</mockito.version>
-		<mockito.version.osgi>3.2.0</mockito.version.osgi>
+		<mockito.version>3.2.4</mockito.version>
+		<mockito.version.osgi>3.2.4</mockito.version.osgi>
 		<!-- Version of Junit 5 library -->
 		<junit5.version>5.6.0-M1</junit5.version>
 		<!-- Version of SLF4J library -->
@@ -220,7 +220,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.dataformat</groupId>
 				<artifactId>jackson-dataformat-xml</artifactId>
-				<version>2.10.0</version>
+				<version>2.10.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -240,7 +240,7 @@
 			<dependency>
 				<groupId>org.eclipse.xtext</groupId>
 				<artifactId>org.eclipse.xtext.xbase.lib</artifactId>
-				<version>2.19.0</version>
+				<version>2.20.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
@@ -511,7 +511,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.2.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -549,9 +549,22 @@
 					<version>3.1.0</version>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M4</version>
+				    <configuration>
+				    	<forkCount>0</forkCount>
+        				<reuseForks>false</reuseForks>
+				        <argLine>--illegal-access=permit</argLine>
+				    </configuration>
+				</plugin>
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-failsafe-plugin</artifactId>
+				    <version>3.0.0-M4</version>
+				    <configuration>
+				        <argLine>--illegal-access=permit</argLine>
+				    </configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -592,7 +605,7 @@
 					<groupId>org.codehaus.gmavenplus</groupId>
 					<artifactId>gmavenplus-plugin</artifactId>
 					<!-- If version 1.6.x or later is not working, use 1.5 -->
-					<version>1.5</version>
+					<version>1.8.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.reficio</groupId>
@@ -753,6 +766,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
+					<source>${min.java.version}</source>
 					<quiet>true</quiet>
 					<docencoding>${sourceEncoding}</docencoding>
 					<show>package</show>
